--- a/ex10-abrir-con-live-server.html
+++ b/ex10-abrir-con-live-server.html
@@ -97,6 +97,8 @@
 
       precio = 59;
       
+      whyUs = "Los estudiantes de programación web eran tan buenos que hasta el HTML se renderizaba con una sonrisa.";
+
       // Ejercicio 2. Escribe un condicional if..else que compruebe lo siguiente. Si el precio del producto es mayor de 50 euros, debemos asignar a la variable claseCSS el valor "text-red-500". En caso contrario, debemos asignar el valor "text-blue-500".
 
       if (precio > 50) {
@@ -117,7 +119,7 @@
 
       // Ejercicio 5. En el mismo punto del Ejercicio 1, cambia la variable whyUs a este valor : "Los estudiantes de programación web eran tan buenos que hasta el HTML se renderizaba con una sonrisa."
 
-      whyUs = "Los estudiantes de programación web eran tan buenos que hasta el HTML se renderizaba con una sonrisa.";
+      /* Respuesta en el Ejercicio 1*/
 
       // NO MODIFICAR A PARTIR DE AQUí!!
 
